--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "jsonwebtoken": "^7.3.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.2",
     "sequelize": "^3.30.2",
